Use the output of  coursier resolve  in test fixtures
Doesn't test artifact type anymore, but these are not the main objective here

--- a/tests/shared/src/test/resources/resolutions/com.github.fommil.netlib/all/1.1.2
+++ b/tests/shared/src/test/resources/resolutions/com.github.fommil.netlib/all/1.1.2
@@ -1,17 +1,17 @@
-com.github.fommil.netlib:all:jar:1.1.2
-com.github.fommil.netlib:core:jar:1.1.2
-com.github.fommil.netlib:native_ref-java:jar:1.1
-com.github.fommil.netlib:native_system-java:jar:1.1
-com.github.fommil.netlib:netlib-native_ref-linux-armhf:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_ref-linux-i686:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_ref-linux-x86_64:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_ref-osx-x86_64:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_ref-win-i686:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_ref-win-x86_64:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_system-linux-armhf:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_system-linux-i686:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_system-linux-x86_64:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_system-osx-x86_64:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_system-win-i686:jar:natives:1.1
-com.github.fommil.netlib:netlib-native_system-win-x86_64:jar:natives:1.1
-com.github.fommil:jniloader:jar:1.1
+com.github.fommil:jniloader:1.1:compile
+com.github.fommil.netlib:all:1.1.2:compile
+com.github.fommil.netlib:core:1.1.2:compile
+com.github.fommil.netlib:native_ref-java:1.1:compile
+com.github.fommil.netlib:native_system-java:1.1:compile
+com.github.fommil.netlib:netlib-native_ref-linux-armhf:1.1:compile
+com.github.fommil.netlib:netlib-native_ref-linux-i686:1.1:compile
+com.github.fommil.netlib:netlib-native_ref-linux-x86_64:1.1:compile
+com.github.fommil.netlib:netlib-native_ref-osx-x86_64:1.1:compile
+com.github.fommil.netlib:netlib-native_ref-win-i686:1.1:compile
+com.github.fommil.netlib:netlib-native_ref-win-x86_64:1.1:compile
+com.github.fommil.netlib:netlib-native_system-linux-armhf:1.1:compile
+com.github.fommil.netlib:netlib-native_system-linux-i686:1.1:compile
+com.github.fommil.netlib:netlib-native_system-linux-x86_64:1.1:compile
+com.github.fommil.netlib:netlib-native_system-osx-x86_64:1.1:compile
+com.github.fommil.netlib:netlib-native_system-win-i686:1.1:compile
+com.github.fommil.netlib:netlib-native_system-win-x86_64:1.1:compile
