--- a/tests/shared/src/test/resources/resolutions/org.scala-js/sbt-scalajs/sbtVersion_0.13_scalaVersion_2.10/0.6.6
+++ b/tests/shared/src/test/resources/resolutions/org.scala-js/sbt-scalajs/sbtVersion_0.13_scalaVersion_2.10/0.6.6
@@ -1,18 +1,18 @@
-args4j:args4j:jar:2.0.16
-com.google.code.findbugs:jsr305:jar:1.3.9
-com.google.guava:guava:jar:14.0.1
-com.google.javascript:closure-compiler:jar:v20130603
-com.google.protobuf:protobuf-java:jar:2.4.1
-com.googlecode.json-simple:json-simple:jar:1.1.1
-io.apigee:rhino:jar:1.7R5pre4
-junit:junit:jar:4.10
-org.hamcrest:hamcrest-core:jar:1.1
-org.json:json:jar:20090211
-org.scala-js:sbt-scalajs;sbtVersion=0.13;scalaVersion=2.10:jar:0.6.6
-org.scala-js:scalajs-ir_2.10:jar:0.6.6
-org.scala-js:scalajs-js-envs_2.10:jar:0.6.6
-org.scala-js:scalajs-sbt-test-adapter_2.10:jar:0.6.6
-org.scala-js:scalajs-tools_2.10:jar:0.6.6
-org.scala-lang:scala-library:jar:2.10.6
-org.scala-sbt:test-interface:jar:1.0
-org.webjars:envjs:jar:1.2
+args4j:args4j:2.0.16:compile
+com.google.code.findbugs:jsr305:1.3.9:compile
+com.google.guava:guava:14.0.1:compile
+com.google.javascript:closure-compiler:v20130603:compile
+com.google.protobuf:protobuf-java:2.4.1:compile
+com.googlecode.json-simple:json-simple:1.1.1:compile
+io.apigee:rhino:1.7R5pre4:compile
+junit:junit:4.10:compile
+org.hamcrest:hamcrest-core:1.1:compile
+org.json:json:20090211:compile
+org.scala-js:sbt-scalajs;sbtVersion=0.13;scalaVersion=2.10:0.6.6:compile
+org.scala-js:scalajs-ir_2.10:0.6.6:compile
+org.scala-js:scalajs-js-envs_2.10:0.6.6:compile
+org.scala-js:scalajs-sbt-test-adapter_2.10:0.6.6:compile
+org.scala-js:scalajs-tools_2.10:0.6.6:compile
+org.scala-lang:scala-library:2.10.6:compile
+org.scala-sbt:test-interface:1.0:compile
+org.webjars:envjs:1.2:compile
