Port project/session-update-from-cmd

--- a/sbt/src/sbt-test/project/session-update-from-cmd/build.check.1
+++ b/sbt/src/sbt-test/project/session-update-from-cmd/build.check.1
@@ -1,3 +1,5 @@
+import Common._
+
 name := "projectName"
 
 k1 := {
@@ -10,3 +12,9 @@ k2 := {
 }
 
 val x = 5; k3 := {}; k4 := {}
+
+
+lazy val root = (project in file(".")).
+  settings(
+    commands ++= Seq(UpdateK1, UpdateK3)
+  )
