--- a/sbt/src/sbt-test/project/session-update-from-cmd/build.check.2
+++ b/sbt/src/sbt-test/project/session-update-from-cmd/build.check.2
@@ -1,3 +1,5 @@
+import Common._
+
 name := "projectName"
 
 k1 := {
@@ -13,3 +15,9 @@ val x = 5; k3 := {
 //
 //
 }; k4 := {}
+
+
+lazy val root = (project in file(".")).
+  settings(
+    commands ++= Seq(UpdateK1, UpdateK3)
+  )
