--- a/notes/1.0.0-M4.markdown
+++ b/notes/1.0.0-M4.markdown
@@ -14,7 +14,7 @@ There's no binary compatibility with sbt 0.13 or other future versions.
 
 The biggest change in sbt 1.0 from 0.13 is internal code reorganization to modules
 (io, util, librarymanagement, zinc, and sbt), but hopefully this shouldn't affect you much.
-In addition, classes and objects related to internal implemetations are moved to `sbt.internal`.
+In addition, classes and objects related to internal implementations are moved to `sbt.internal`.
 This package indicates that we won't keep binary compatibility for them.
 
 Here are some more relevant changes:
