--- a/notes/0.13.13.markdown
+++ b/notes/0.13.13.markdown
@@ -8,6 +8,7 @@
   Just in case `InputTask[A]` is needed, `.inputTaskValue` method is now provided. [#2709][2709] by [@eed3si9n][@eed3si9n]
 - sbt 0.13.13 renames the early command `--<command>` that was added in 0.13.1 to `early(<command>)`. This fixes the regression [#1041][1041]. For backward compatibility `--error`, `--warn`, `--info`, and `--debug` will continue to function during the 0.13 series, but it is strongly encouraged to migrate to the single hyphen options: `-error`, `-warn`, `-info`, and `-debug`. [#2742][2742] by [@eed3si9n][@eed3si9n]
 - Improve `show` when key returns a `Seq` by showing the elements one per line. Disable with `-Dsbt.disable.show.seq=true`. [#2755][2755] by [@eed3si9n][@eed3si9n]
+- Recycles classloaders to be anti-hostile to JIT. Disable with `-Dsbt.disable.interface.classloader.cache=true`. [#2754][2754] by [@retronym][@retronym]
 
 ### Improvements
 
@@ -122,6 +123,7 @@ For `<+=` and `<++=`, use `+= { x.value }` and `++= { x.value }`.
   [2738]: https://github.com/sbt/sbt/issues/2738
   [2742]: https://github.com/sbt/sbt/pull/2742
   [2746]: https://github.com/sbt/sbt/pull/2746
+  [2754]: https://github.com/sbt/sbt/pull/2754
   [2755]: https://github.com/sbt/sbt/pull/2755
   [110]: https://github.com/sbt/sbt-launcher-package/pull/110
   [111]: https://github.com/sbt/sbt-launcher-package/pull/111
@@ -135,3 +137,4 @@ For `<+=` and `<++=`, use `+= { x.value }` and `++= { x.value }`.
   [@fommil]: https://github.com/fommil
   [@milessabin]: https://github.com/milessabin
   [@pauldraper]: https://github.com/pauldraper
+  [@retronym]: https://github.com/retronym
