--- a/notes/0.13.13.markdown
+++ b/notes/0.13.13.markdown
@@ -2,6 +2,7 @@
 ### Fixes with compatibility implications
 
 - Deprecates the old symbolic operators, to be removed in sbt 1.0. See below for more details.
+- Deprecates the old sbt 0.10 syntax, to be removed in sbt 1.0. See http://www.scala-sbt.org/0.13/docs/Migrating-from-sbt-012x.html for more details. [#2763][2763]/[#2764][2764] by [@dwijnand][@dwijnand]
 - The `.value` method is deprecated for input tasks. Calling `.value` on an input key returns an `InputTask[A]`,
   which is completely unintuitive and often results in a bug. In most cases `.evaluated` should be called,
   which returns `A` by evaluating the task.
@@ -129,6 +130,8 @@ For `<+=` and `<++=`, use `+= { x.value }` and `++= { x.value }`.
   [2746]: https://github.com/sbt/sbt/pull/2746
   [2754]: https://github.com/sbt/sbt/pull/2754
   [2755]: https://github.com/sbt/sbt/pull/2755
+  [2763]: https://github.com/sbt/sbt/issues/2763
+  [2764]: https://github.com/sbt/sbt/pull/2764
   [110]: https://github.com/sbt/sbt-launcher-package/pull/110
   [111]: https://github.com/sbt/sbt-launcher-package/pull/111
   [sbt-ivy-22]: https://github.com/sbt/ivy/pull/22
