--- a/notes/1.0.0-RC1.markdown
+++ b/notes/1.0.0-RC1.markdown
@@ -1,16 +1,20 @@
-## Changes
+# Changes
 
-### New features
+## New features
 
-* Allow to launch applications from their Scaladex name via the `coursier launch` command ([#385], thanks to [@MasseGuillaume] too)
+### Scaladex-based launch command
 
-Example
+Allows to launch applications from their Scaladex name via the `coursier launch` command ([#385], thanks to [@MasseGuillaume] too)
+
+Example:
 ```
 $ coursier launch lihaoyi/Ammonite
 $ coursier launch scalameta/scalafmt
 ```
 
-* Add sbt-shading plugin ([#426])
+### New sbt-shading plugin
+
+Added in [#426]
 
 Allows to shade dependencies like
 ```
@@ -23,7 +27,9 @@ lazy val myProj = project
 ```
 `sbt myProj/shading:publish` then publishes `myProj` with `com.foo` shaded under the `myproj.shaded` namespace.
 
-* Add experimental 100% coursier-based sbt launcher ([#439], available at [csbt])
+### Experimental 100% coursier-based sbt launcher
+
+Added in [#439], available at [csbt]
 
 Try it from the coursier sources with
 ```
@@ -40,6 +46,8 @@ plugins = [
 ]
 ```
 
+### Other new features
+
 * Helper syntax for bintray Ivy repositories ([#481], thanks to [@olafurpg])
 
 Example
@@ -47,7 +55,7 @@ Example
 $ coursier launch -r bintray-ivy:org/repo-name ...
 ```
 
-### Bug fixes
+## Bug fixes
 
 * Fix javadoc and sources of scala-library / scala-reflect not found when using the same Scala version as sbt ([#406])
 * Better handling of packaging / artifact types / optional dependencies from Maven repositories ([#430]) - fixes broken or buggy `sbt console`, missing JARs for dependencies having packaging POM in their POM file.
@@ -56,13 +64,13 @@ $ coursier launch -r bintray-ivy:org/repo-name ...
 * Don't trap parent POM or dependency management metadata errors ([#437], thanks to [@kzys])
 * Trim Maven properties ([#421], thanks to [@kzys])
 
-### Version bumps
+## Version bumps
 
 * Switch to scala 2.12.1 ([#426])
 * Switch to scalaz 7.2.8 ([#426])
 * Switch to scalajs 0.6.15 ([#467])
 
-### Other
+## Other
 
 * Fix typos in README ([#413], thanks to [@n4to4])
 * Shade fastparse dependency ([#443])
@@ -96,7 +104,8 @@ $ coursier launch -r bintray-ivy:org/repo-name ...
 [@MasseGuillaume]: https://github.com/MasseGuillaume
 [@n4to4]: https://github.com/n4to4
 [@olafurpg]: https://github.com/olafurpg
+[csbt]: https://github.com/coursier/coursier/blob/v1.0.0-RC/csbt
 
-### Non-backward compatible changes
+## Non-backward compatible changes
 
 * Some internal (but public) API changed, it is recommended to re-compile your code against `1.0.0-RC1`.
