--- a/notes/0.13.15.markdown
+++ b/notes/0.13.15.markdown
@@ -1,10 +1,10 @@
 ### Fixes with compatibility implications
 
-- sbt 0.13.14 removes the Maven version range when possible. See below.
+- sbt 0.13.15 removes the Maven version range when possible. See below.
 
 ### Improvements
 
-- Adds preliminary compatibility with JDK 9. Using this requires 0.13.14+ launcher. [#2951][2951]/[143][143] by [@retronym][@retronym]
+- Adds preliminary compatibility with JDK 9. Using this requires 0.13.15+ launcher. [#2951][2951]/[143][143] by [@retronym][@retronym]
 - Adds "local-preloaded" repository for offline installation. See below.
 - Notifies and enables users to stay in sbt's shell on the warm JVM by hitting `[ENTER]` while sbt is running. [#2987][2987]/[#2996][2996] by [@dwijnand][@dwijnand]
 - Adds an `Append` instance to support `sourceGenerators += Def.task { ... }`, instead of needing `.taskValue`. [#2943][2943] by [@eed3si9n][@eed3si9n]
@@ -45,7 +45,7 @@ it would go out to the Internet to find the latest version.
 This would result to a surprising behavior where the eventual version keeps changing over time
 *even when there's a version of the library that satisfies the range condition*.
 
-Starting sbt 0.13.14, some Maven version ranges would be replaced with its lower bound
+Starting sbt 0.13.15, some Maven version ranges would be replaced with its lower bound
 so that when a satisfactory version is found in the dependency graph it will be used.
 You can disable this behavior using the JVM flag `-Dsbt.modversionrange=false`.
 
@@ -53,7 +53,7 @@ You can disable this behavior using the JVM flag `-Dsbt.modversionrange=false`.
 
 ### Offline installation
 
-sbt 0.13.14 adds two new repositories called "local-preloaded-ivy"
+sbt 0.13.15 adds two new repositories called "local-preloaded-ivy"
 and "local-preloaded" that point to `~/.sbt/preloaded/`.
 The purpose for the repositories is to preload them with
 sbt artifacts so the installation of sbt will not require access to the Internet.
@@ -69,7 +69,7 @@ No changes should be necessary to your project definition and all plugins publis
 
 See [Migrating from sbt 0.12.x](http://www.scala-sbt.org/0.13/docs/Migrating-from-sbt-012x.html) for details on the old operator deprecation.
 
-Special thanks to the contributors for making this release a success. According to `git shortlog -sn --no-merges v0.13.13..0.13`, compared to 0.13.13, there were 42 (non-merge) commits, by ten contributors: Dale Wijnand, Eugene Yokota,  Guillaume Martres, Jason Zaugg, Petro Verkhogliad, Eric Richardson, Claudio Bley, Haochi Chen, Paul Draper, Ashley Mercer. Thank you!
+Special thanks to the contributors for making this release a success. According to `git shortlog -sn --no-merges v0.13.13..0.13.15`, compared to 0.13.13, there were 64 (non-merge) commits, by eleven contributors: Eugene Yokota, Dale Wijnand, Guillaume Martres, Jason Zaugg, Lars Hupel, Petro Verkhogliad, Eric Richardson, Claudio Bley, Haochi Chen, Paul Draper, Ashley Mercer. Thank you!
 
   [143]: https://github.com/sbt/sbt-launcher-package/pull/143
   [145]: https://github.com/sbt/sbt-launcher-package/pull/145
