--- a/src/debian/changelog
+++ b/src/debian/changelog
@@ -1,3 +1,11 @@
+sbt (0.13.15) stable; urgency=low
+
+  * sbt 0.13.15 removes the Maven version range when possible.
+  * Adds preliminary compatibility with JDK 9. Using this requires 0.13.15+ launcher. #2951 by @retronym
+  * Adds "local-preloaded" repository for offline installation
+
+ -- Eugene Yokota <eed3si9n@gmail.com> Mon, 10 Apr 2017 00:00:00 +0000
+
 sbt (0.13.13) stable; urgency=low
 
   * The `new` command, which helps creating new build definitions.
