Fix link in release notes
Reported by @ritschwumm (via https://gitter.im/coursier/coursier?at=58f15a5dbdf4acc1125e6d5f)

--- a/notes/1.0.0-RC1.markdown
+++ b/notes/1.0.0-RC1.markdown
@@ -104,7 +104,7 @@ $ coursier launch -r bintray-ivy:org/repo-name ...
 [@MasseGuillaume]: https://github.com/MasseGuillaume
 [@n4to4]: https://github.com/n4to4
 [@olafurpg]: https://github.com/olafurpg
-[csbt]: https://github.com/coursier/coursier/blob/v1.0.0-RC/csbt
+[csbt]: https://github.com/coursier/coursier/blob/v1.0.0-RC1/csbt
 
 ## Non-backward compatible changes
 
