--- a/notes/0.13.16.markdown
+++ b/notes/0.13.16.markdown
@@ -12,20 +12,20 @@
 
 The two new startup messages introduced in sbt 0.13.15 are:
 
-- when writing out `sbt.version` for build reproducability, and
-- when informing the user sbt shell for the performance improvement
+- when writing out `sbt.version`, for build reproducability, and
+- when informing the user about sbt's shell, for the performance improvement
 
 When writing out `sbt.version` the messaging now:
 
 - correctly uses a logger rather than println
-- honours the log level set, for instance, by `--error`
-- never runs when sbt "new" is being run
+- honours the log level set, for instance by `--error`
+- never executes when sbt "new" is being run
 
-When informing the user about sbt shell the messaging now:
+When informing the user about sbt's shell the messaging now:
 
 - is a 1 line message, rather than 3
 - is at info level, rather than warn level
-- can be suppressed with `suppressSbtShellNotification := false`
+- can be suppressed with `suppressSbtShellNotification := true`
 - only triggers when `compile` is being run
 - never shows when sbt `new` is being run
 
