Add a few more migration notes to 1.0.0 notes

--- a/notes/1.0.0.markdown
+++ b/notes/1.0.0.markdown
@@ -31,6 +31,10 @@ We are working with Scala Center to provide [an automatic migration tool][sbt-mi
 - Drops deprecated `seq(..)` DSL method. Use `Seq` or pass in the settings without wrapping.
 - Drops deprecated `File`/`Seq[File]` setting enrichments. Use `.value` and `Def.setting`.
 - Drops deprecated `SubProcess` `apply` overload. Use `SubProcess(ForkOptions(runJVMOptions = ..))`.
+- Drops `toError(o: Option[String]): Unit` in favour of `o foreach sys.error`.
+- A number of the methods on `sbt.Path` (such as `relativeTo` and `rebase` and `flat`) are now no longer in the
+    default namespace by virtue of being mixed into the sbt package object. Use `sbt.io.Path` to access them
+    again.
 
 #### Features
 
